test/e2e/fail_compile/generics/where_false.cst
fn always_false() -> bool {
    false
}

fn id<T>(value: T) -> T where always_false() {
    value
}

fn main() -> num {
    id(0)
}
